reduce hostname width to fix overflow on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -149,7 +149,7 @@ h1 {
     font-size: 1.1em;
     /*display: block;*/
     display: inline-block;
-    width: 480px;
+    width: 428px;
     font-weight: 600;
 }
 
